--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   --color-tertiary : #e9f5f7;
   --color-member-badge:teal;
   --color-admin-badge:rgba(193, 16, 16, 0.773);
+  --color-row : #f8f8f8 ;
 }
 
 *,
