Header and Row UI updated

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   --color-primary: #319fa9;
   --color-primary-glow: #00b3c3;
   --color-red: #f53f3fed;
-  --color-red-glow: #ff0000ed;
+  --color-red-glow: #ff0000;
   --color-grey : #8996b1;
   --color-tertiary : #e9f5f7;
   --color-member-badge:teal;
